; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_opt_size.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_opt_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @opt_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opt_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %16 [
    i32 143, label %5
    i32 135, label %5
    i32 138, label %5
    i32 139, label %6
    i32 142, label %6
    i32 134, label %6
    i32 129, label %6
    i32 140, label %7
    i32 137, label %8
    i32 130, label %9
    i32 128, label %10
    i32 132, label %10
    i32 144, label %11
    i32 136, label %12
    i32 133, label %13
    i32 131, label %14
    i32 141, label %15
  ]

5:                                                ; preds = %1, %1, %1
  store i32 4, i32* %2, align 4
  br label %19

6:                                                ; preds = %1, %1, %1, %1
  store i32 4, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  store i32 8, i32* %2, align 4
  br label %19

8:                                                ; preds = %1
  store i32 4, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  store i32 8, i32* %2, align 4
  br label %19

10:                                               ; preds = %1, %1
  store i32 4, i32* %2, align 4
  br label %19

11:                                               ; preds = %1
  store i32 12, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  store i32 8, i32* %2, align 4
  br label %19

13:                                               ; preds = %1
  store i32 4, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  store i32 4, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  store i32 4, i32* %2, align 4
  br label %19

16:                                               ; preds = %1
  %17 = load i32, i32* @EINVAL, align 4
  %18 = call i32 @AVERROR(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
